<resources>
    <string name="app_name">My Application</string>
    <string name="name_sriwattana">Sriwattana</string>
    <string name="user">User :</string>
    <string name="password">Password :</string>
    <string name="new_register">New_register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="save">save</string>
    <string name="register">Register1</string>
</resources>
